-m working for 30pkts

--- a/Project4/Makefile
+++ b/Project4/Makefile
@@ -4,7 +4,7 @@ CFLAGS=-g -Wall -Werror
 TARGETS=proj4
 
 all: $(TARGETS)
-	g++ -std=c++14 -o proj4 proj4.c
+	g++ -std=c++11 -o proj4 proj4.cpp
 
 clean:
 	rm -f $(TARGETS) 
